# YetAnotherPvPFix

./: .gitignore  CMakeLists.txt  README.md
assets/: PVP-settings.ini
include/: ModConfig.h
src/: ModConfig.cpp  dllmain.cpp
src/SDK/Classes/: PalOptionSubsystem.cpp
